--- a/img2.html
+++ b/img2.html
@@ -8,7 +8,8 @@
     <title>Hola</title>
 </head>
 <body>
-    <div id="yea"><h2>¿Regina, quieres ser mi novia?</h2></div>
+    <div id="yea"><h2>¿Regina, quieres ser mi novia?
+<br>Actualizacion: llevamos una feliz vida juntos</h2></div>
     
 </body>
 </html>
