--- a/img2.html
+++ b/img2.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div id="yea"><h2>¿Regina, quieres ser mi novia?
-<br>Actualizacion: llevamos una feliz vida juntos</h2></div>
+<br>Actualizacion: llevamos una feliz vida juntos
+        <br>Actualización 15/11/22: ya no me quiere</h2></div>
     
 </body>
 </html>
