--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <td width="100" height="120"><a href="img1.html"><img width="300" height="250" class="imagenes" src="CSS/recursos/img.jpg"></a></td>
                 <td width="100" height="120"><a href="img2.html"><img width="300" height="250" class="imagenes" src="CSS/recursos/img2.jpg"></a></td>
                 <td width="100" height="120"><a href="img3.html"><img width="300" height="250" class="imagenes" src="CSS/recursos/img3.jpg"></a></td>
+                <td width="100" height="120"><a href="img3.html"><img width="300" height="250" class="imagenes" src="CSS/recursos/img4.jpg"></a></td>
             </tr>
         </table>
 
