--- a/img2.html
+++ b/img2.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style.css">
-    <title>Hola</title>
+    <title>Diario de una pasión.</title>
 </head>
 <body>
     <div id="yea"><h2>¿Regina, quieres ser mi novia?
-<br>Actualizacion: llevamos una feliz vida juntos
+        <br>Actualizacion: llevamos una feliz vida juntos
         <br>Actualización 15/11/22: ya no me quiere</h2></div>
-    
+        <br>Actualización 30/04/23: no lo puedo creer</h2></div>
 </body>
 </html>
