--- a/img4.html
+++ b/img4.html
@@ -4,11 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Orquídeas</title>
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    <h1>404 Not found</h1><br>
-    <h2>La q sigue</h2>
+    <h1>Phalaenopsis</h1><hr>
+    <div id="lista">
+        <h2>Cuidados de la planta</h2>
+        <ul>
+            <li><b>Luz</b>: Coloque la orquídea donde reciba la luz de sol de forma indirecta.</li><br>
+            <li><b>Color de las hojas</b>: El color de las hojas nos puede indicar que necesita la planta.<br>
+                <ul>
+                    <li>Verde: Ideal</li>
+                    <li>Amarillo: Exceso de luz</li>
+                    <li>Verde Oscuro: Falta de luz</li>
+                </ul>
+            </li>
+            <br>
+            <li><b>Riego</b>: Cada 10 o 12 días</li><br>
+            <li><b>Raíces</b>: Blancas carnosa.</li><br>
+            <li><b>Temperatura</b>: Entre 20 y 28 °C</li>
+        </ul>
+    </div>
+    <br>
+    <p>Cuidar que no existan cambios bruscos de temperatura.</p>
+    <br>
+    <a href="img4-video.html"><button class="button">Siguiente página</button></a>   
+    <br>
+    <hr>
     <a href="index.html">Regresar</a>
 </body>
 </html>
