--- a/img2.html
+++ b/img2.html
@@ -8,9 +8,10 @@
     <title>Diario de una pasión.</title>
 </head>
 <body>
-    <div id="yea"><h2>¿Regina, quieres ser mi novia?
-        <br>Actualizacion: llevamos una feliz vida juntos
-        <br>Actualización 15/11/22: ya no me quiere</h2></div>
-        <br>Actualización 30/04/23: no lo puedo creer</h2></div>
+    <div id="yea"><h2>¿Regina, quieres ser mi novia?<br>
+        <br>Actualización: llevamos una feliz vida juntos
+        <br>Actualización 15/11/22: ya no me quiere
+        <br>Actualización 30/04/23: no lo puedo creer
+    </h2></div>
 </body>
 </html>
